# Craftel

./: .gitignore  AGENTS.md  Cargo.toml  Design.md  README.md  package.json  pnpm-lock.yaml
.agents/: resume  setup
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
apps/desktop/src/api/: craftel.ts  mock.ts  tauri.ts  types.ts  updater.ts
apps/desktop/src/components/: Board.test.tsx  Board.tsx  BoardColumn.tsx  CreateTaskDialog.test.tsx  CreateTaskDialog.tsx  DirectoryPickerDialog.test.tsx  DirectoryPickerDialog.tsx  EditTaskDialog.test.tsx  EditTaskDialog.tsx  (+14 more)
craftel/: INDEX.md
craftel/tasks/T0001-craftel-foundation/: SPEC.md  TASK.md
crates/craftel-cli/: Cargo.toml
crates/craftel-cli/src/: args.rs  main.rs  output.rs
crates/craftel-cli/tests/: cli.rs  workflow_automation.rs
crates/craftel-cli/tests/fixtures/: automation_cursor.sh
crates/craftel-core/: Cargo.toml
crates/craftel-core/migrations/: 001_foundation.sql  002_documents.sql  003_document_hardening.sql  004_document_status.sql  005_harness.sql  006_supervisor_hardening.sql  007_automation.sql
crates/craftel-core/src/: app_paths.rs  automation.rs  git_summary.rs  harness.rs  lib.rs  run_service.rs  runs.rs  service.rs
crates/craftel-core/src/documents/: indexer.rs  mod.rs  path.rs  repository.rs  slug.rs  task_document.rs  watcher.rs
crates/craftel-core/src/domain/: mod.rs  project.rs  task.rs  workflow.rs
crates/craftel-core/src/storage/: error.rs  mod.rs  sqlite.rs
crates/craftel-core/tests/: automation_repository.rs  cursor_harness.rs  document_repository.rs  document_service.rs  document_watcher.rs  git_summary.rs  review_cycle.rs  run_repository.rs  run_service.rs  sqlite_repository.rs  task_service.rs  workflow_automation.rs
crates/craftel-core/tests/fixtures/: fake_cursor.sh
docs/: releasing-macos.md
docs/acceptance/: 2026-07-21-craftel-linux-mvp.md
docs/plans/: 2026-07-21-craftel-cursor-harness.md  2026-07-21-craftel-design.md  2026-07-21-craftel-documents.md  2026-07-21-craftel-gui-workspace.md  2026-07-21-craftel-workflow-automation.md
docs/superpowers/plans/: 2026-07-21-craftel-foundation.md
scripts/: release.mjs  release.test.mjs
(+2 files in other folders)
