[package]
name = "craftel-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "craftel"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
craftel-core = { path = "../craftel-core" }
serde = "1"
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
