[package]
name = "craftel-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
deunicode = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
walkdir = "2"
libc = "0.2"
sysinfo = "0.37"

[dev-dependencies]
tempfile = "3"
