[package]
name = "craftel-desktop"
version = "0.1.0"
edition = "2024"

[lib]
name = "craftel_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
craftel-core = { path = "../../../crates/craftel-core" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
