[package]
name = "craftel-desktop"
version = "0.1.0"
edition = "2024"

[lib]
name = "craftel_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
craftel-core = { path = "../../../crates/craftel-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3"
